@@ -31,7 +31,7 @@ namespace CardMaker
         public static string GetBuildSuffix()
         {
 #if UNSTABLE
-            return "[UNSTABLE] V.A2";
+            return "[UNSTABLE] V.A3";
 #else
             return string.Empty;
 #endif
